# Cartridge-2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.alphazero  Makefile  README.md  TODO.md  config.defaults.toml  config.toml  docker-compose.k8s.yml  docker-compose.yml  plan.loss-visualization.md  plan.md  prometheus.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
actor/: .dockerignore  Cargo.toml  Dockerfile  README.md
actor/src/: actor.rs  central_config.rs  config.rs  game_config.rs  health.rs  main.rs  mcts_policy.rs  metrics.rs  model_watcher.rs  policy.rs  replay.rs  stats.rs
actor/src/storage/: mod.rs  postgres.rs  sqlite.rs
docs/: K8S_SCALING.md  MVP.md  PLAN_mcts_training_targets.md  claude-generalization-ideas.md  claude-k8s-ideas.md  codex-generalization-ideas.md  combined-generalization.md  enhanced-network-architecture.md
documentation/: API.md  ARCHITECTURE.md  codex-k8s-ideas.md  scaling-ideas.md
documentation/claude/: actor-learner-testing-plan.md  central-config-duplication-plan.md  chart-abstraction-plan.md  continuous-training-plan.md  cross-component-config-plan.md  deployment-plan-part1.md  deployment-plan-part2.md  generic-board-plan.md  orchestrator-plan.md  prometheus.md  structured-logging-plan.md
engine/: Cargo.toml  README.md
engine/config/: Cargo.toml
engine/config/src/: lib.rs
engine/engine-config/: Cargo.toml  SCHEMA.md
engine/engine-config/src/: defaults.rs  lib.rs  loader.rs  structs.rs  tests.rs
engine/engine-core/: Cargo.toml  README.md
engine/engine-core/src/: adapter.rs  adapter_tests.rs  board_game.rs  context.rs  erased.rs  game_utils.rs  lib.rs  metadata.rs  registry.rs  typed.rs
engine/engine-games/: Cargo.toml
engine/engine-games/src/: lib.rs
engine/games-connect4/: Cargo.toml  README.md
engine/games-connect4/src/: lib.rs  tests.rs
engine/games-tictactoe/: Cargo.toml  README.md
engine/games-tictactoe/benches/: engine.rs
engine/games-tictactoe/src/: lib.rs  tests.rs
engine/mcts/: Cargo.toml  README.md
engine/mcts/benches/: mcts.rs
engine/mcts/src/: config.rs  evaluator.rs  lib.rs  node.rs  onnx.rs  search.rs  tree.rs
engine/model-watcher/: Cargo.toml
engine/model-watcher/src/: lib.rs  s3.rs
k8s/: README.md  kind-cluster.yaml
k8s/base/: actor-deployment.yaml  configmap.yaml  kustomization.yaml  models-pvc.yaml  namespace.yaml  orchestrator-deployment.yaml  pvc.yaml  trainer-job.yaml
k8s/base/actor/: deployment.yaml
k8s/base/minio/: deployment.yaml  service.yaml  setup-job.yaml
k8s/base/postgres/: init-configmap.yaml  service.yaml  statefulset.yaml
k8s/base/trainer/: deployment.yaml
k8s/base/web/: deployment.yaml  ingress.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
scripts/: Dockerfile  docker_train.sh  init-postgres.sql  train_loop.py
sql/: schema.sql
terraform/: .gitignore  README.md
terraform/environments/dev/: main.tf  terraform.tfvars.example
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/cloud-sql/: main.tf  outputs.tf  variables.tf
terraform/modules/gke/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
trainer/: .dockerignore  Dockerfile  README.md  pyproject.toml  smoke_test.py  train-loop.sh
trainer/src/trainer/: __init__.py  __main__.py  backoff.py  central_config.py  checkpoint.py  config.py  evaluator.py  game_config.py  logging_utils.py  lr_scheduler.py  metrics.py  network.py  orchestrator.py  replay.py  resnet.py  stats.py  structured_logging.py  trainer.py
trainer/src/trainer/games/: __init__.py  connect4.py  tictactoe.py
trainer/src/trainer/orchestrator/: __init__.py  actor_runner.py  cli.py  config.py  eval_runner.py  orchestrator.py  stats_manager.py
trainer/src/trainer/policies/: __init__.py  onnx.py  random.py
trainer/src/trainer/storage/: __init__.py  base.py  factory.py  filesystem.py  postgres.py  s3.py  sqlite.py
trainer/tests/: __init__.py  conftest.py  test_smoke.py  test_stats.py  test_trainer_config_cli.py
web/: .dockerignore  Cargo.toml  Dockerfile  README.md
web/frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.svelte  Board.svelte  Connect4Board.svelte  GenericBoard.svelte  LossChart.svelte  LossOverTimePage.svelte  Stats.svelte  main.ts
web/frontend/src/lib/: api.ts  chart.ts  constants.ts  utils.ts
web/src/: central_config.rs  game.rs  main.rs  metrics.rs  model_watcher.rs
web/src/handlers/: game.rs  health.rs  mod.rs  stats.rs
web/src/types/: mod.rs  requests.rs  responses.rs
