[package]
name = "actor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actor"
path = "src/main.rs"

[dependencies]
# Engine library (local)
engine-core = { path = "../engine/engine-core" }
games-tictactoe = { path = "../engine/games-tictactoe" }
games-connect4 = { path = "../engine/games-connect4" }
mcts = { path = "../engine/mcts", features = ["onnx"] }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# Async and concurrency
futures = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite for replay buffer
rusqlite = { version = "0.32", features = ["bundled"] }

# Time utilities
uuid = { version = "1.6", features = ["v4"] }

# File watching for model hot-reload
notify = "7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
once_cell = "1.18"
