[package]
name = "actor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actor"
path = "src/main.rs"

[features]
default = []
# Enable PostgreSQL backend for K8s deployments
postgres = ["tokio-postgres"]
# Enable S3/MinIO model storage for K8s deployments
s3 = ["model-watcher/s3"]

[dependencies]
# Engine library (local)
engine-core = { path = "../engine/engine-core" }
games-tictactoe = { path = "../engine/games-tictactoe" }
games-connect4 = { path = "../engine/games-connect4" }
mcts = { path = "../engine/mcts", features = ["onnx"] }
model-watcher = { path = "../engine/model-watcher" }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# Async and concurrency
futures = "0.3"
async-trait = "0.1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite for replay buffer (default backend)
rusqlite = { version = "0.32", features = ["bundled"] }

# PostgreSQL for replay buffer (K8s backend, feature-gated)
tokio-postgres = { version = "0.7", optional = true }

# Time utilities
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[dependencies.once_cell]
version = "1.18"
