[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "src/main.rs"

[features]
default = ["onnx"]
onnx = ["mcts/onnx"]

[dependencies]
# Engine library
engine-core = { path = "../engine/engine-core" }
games-tictactoe = { path = "../engine/games-tictactoe" }
games-connect4 = { path = "../engine/games-connect4" }
mcts = { path = "../engine/mcts" }
model-watcher = { path = "../engine/model-watcher", features = ["metadata"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Randomness
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
# Testing
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
