[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crypto and randomness
rand_chacha = { workspace = true }
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Concurrency
once_cell = { workspace = true }

# Serialization
serde = { workspace = true }

# Observability (logging only)
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = "1.0"