[package]
name = "model-watcher"
version = "0.1.0"
edition = "2021"
description = "ONNX model file watcher with hot-reload support"

[features]
default = []
# Enable additional metadata tracking (for web server use)
metadata = []
# Enable S3/MinIO backend for K8s deployments
s3 = ["aws-sdk-s3", "aws-config"]

[dependencies]
# MCTS crate for OnnxEvaluator
mcts = { path = "../mcts", features = ["onnx"] }

# Async runtime
tokio = { version = "1.0", features = ["sync", "time", "fs", "rt"] }

# File watching
notify = "7"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"

# S3/MinIO support (optional, for K8s deployments)
aws-sdk-s3 = { version = "1.3", optional = true }
aws-config = { version = "1.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["full", "test-util"] }
